--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="asset/candi.jpg" class="d-block w-100" alt="...">
+                <img src="./asset/candi.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption text-start">
                     <h1>Judul Berita 1</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error sunt, illo ratione eos cumque corrupti! Repellendus, harum exercitationem temporibus illo nobis obcaecati consectetur minus, eius quibusdam natus aspernatur incidunt ad.</p>
@@ -50,7 +50,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="asset/malioboro.jpg" class="d-block w-100" alt="...">
+                <img src="/asset/malioboro.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption text-start">
                     <h1>Judul Berita 2</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error sunt, illo ratione eos cumque corrupti! Repellendus, harum exercitationem temporibus illo nobis obcaecati consectetur minus, eius quibusdam natus aspernatur incidunt ad.</p>
@@ -59,7 +59,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="asset/pantai.jpg" class="d-block w-100" alt="...">
+                <img src="./asset/pantai.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption text-start">
                     <h1>Judul Berita 3</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error sunt, illo ratione eos cumque corrupti! Repellendus, harum exercitationem temporibus illo nobis obcaecati consectetur minus, eius quibusdam natus aspernatur incidunt ad.</p>
